// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Container-flex Container-column Sidebar-root Sidebar-light"
    >
      <div
        class="Sidebar-spacer"
      />
    </div>
  </div>
</div>
`;

exports[`Sidebar with menu  1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Container-flex Container-column Sidebar-root Sidebar-light"
    >
      <div
        class="Sidebar-spacer"
      />
      <ul
        class="MuiList-root Menu-root SidebarMenu-root"
        role="menu"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`Sidebar with one normal and one bottom menu  1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Container-flex Container-column Sidebar-root Sidebar-light"
    >
      <div
        class="Sidebar-spacer"
      />
      <ul
        class="MuiList-root Menu-root SidebarMenu-root"
        role="menu"
        tabindex="-1"
      />
      <ul
        class="MuiList-root Menu-root SidebarMenu-root SidebarMenu-bottom"
        role="menu"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;
